# python-package-template

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .templatesyncignore  README.md  pyproject.toml
.github/workflows/: build.yml  bump-version.yml  instantiate-new-project.yml  publish.yml  publish2.yml  sync-template.yml  trigger-template-sync.yml  validate.yml
python_package_template/cli/: main.py
python_package_template/main/: main.py
scripts/pre-commit/: bump_version.sh
src/python_package_template/: __init__.py
src/python_package_template/cli/: __init__.py  entry_point.py  utils.py
src/python_package_template/context/: __init__.py  context.py  options.py  secrets.py
src/python_package_template/main/: __init__.py  main.py
src/python_package_template/models/: __init__.py  options.py  path.py  secrets_.py
tests/: test_cli_entry_point.py  test_testing.py
